--- a/BAB10.html
+++ b/BAB10.html
@@ -8,10 +8,8 @@
 <body>
 	<div id="wrapper">
 		<header>
-			<h1>Daftar Wisata Kabupaten Nganjuk</h1>
-			<img src="image/logo.jpg" alt="logo" width="14%">	
-			<p>	Tempat wisata Favorit	
-			<ul>
+			<img src="image/nganjuk.png" alt="logo" width="50%">	
+			<ul id="menu-utama">
 				<li><a href="#sedudo">Air Terjun Sedudo</a></li>
 				<li><a href="#lawang">Watu Lawang</a></li>
 				<li><a href="#surga">Bukit Surga</a></li>
@@ -36,8 +34,7 @@
 				<p>Air Terjun Sedudo adalah sebuah air terjun dan objek wisata yang terletak di Desa Ngliman Kecamatan Sawahan, Kabupaten Nganjuk, Jawa Timur.
                 Jaraknya sekitar 30 km arah selatan ibu kota kabupaten Nganjuk. Berada pada ketinggian 1.438 meter dpl, 
                 ketinggian air terjun ini sekitar 105 meter. Tempat wisata ini memiliki fasilitas yang cukup baik, dan jalur transportasi yang mudah diakses</p>
-				<p>Lihat Lokasi <a href="https://maps.app.goo.gl/zKPjb6BfVYGRbEGw8">disini</a></p>
-				<hr>
+				 <a href="https://maps.app.goo.gl/zKPjb6BfVYGRbEGw8">Lokasi</a></p>
 			</article>
 			<article>
 				<h3 id="lawang">Watu Lawang</h3>
@@ -49,20 +46,19 @@
                     kalian bisa datang ke wisata Watu Lawang. Lokasinya di Desa Ngliman, Kecamatan Sawahan.
                     Wisata Watu Lawang Nganjuk merupakan destinasi yang baru dibuka untuk umum pada 2017. Dari tengah kota, jaraknya sekitar 30 kilometer. 
                     Dengan kendaraan roda dua memerlukan waktu sekitar 49 menit, namun jika menggunakan roda empat memakan waktu setidaknya 52 menit.</p>
-				<p>Lihat Lokasi <a href="https://maps.app.goo.gl/JuHCvD2fBrwLDVQv5">disini</a></p>
-				<hr>
+				 <a href="https://maps.app.goo.gl/JuHCvD2fBrwLDVQv5">Lokasi</a></p>
+				
 			</article>
 			<article>
 				<h3 id="surga">Bukit Surga</h3>
 				<h4>Bareng, Sawahan, Nganjuk, Jawa Timur</h4>
 				<img src="image/surga.jpg" alt="gambarbukitsurga">
-				<p>Total Suara : <b>-</b> meter</p>
+				<p>Ketinggian : <b>-</b> meter</p>
 				<p><i>Berkemah dan menikmati keindahan alam</i></p>
 				<p>Nganjuk menawarkan tempat berlibur yang sanat indah dan berada di ketinggian, sangat rekomended untuk dikunjungi. 
                     Namanya adalah Bukit Surga Bareng.Di sini kalian bisa berkemah sambil menikmati pemandangan di sekeliling Bukit Surga Bareng. 
                     Cocok sekali bagi para petualang yang suka tantangan..</p>
-				<p>Lihat Lokasi <a href="https://maps.app.goo.gl/PTgQubZbPoizcezXA">disini</a></p>
-				<hr><br><br><br><br><br><br><br><br><br><br>
+				 <a href="https://maps.app.goo.gl/PTgQubZbPoizcezXA">Lokasi</a></p>
 			</article>		
 		</section>
 
@@ -84,8 +80,11 @@
 
 		</footer>
 
-
 	</div>
 
 </body>
+<head>
+	<title>Latihan Markup</title>
+	<link rel="stylesheet" href="style.css" />
+</head>
 </html>
